test/visibility/import/enablesUnqualified/multipleUnqualified/badName.good
badName.chpl:4: In module 'User':
badName.chpl:5: error: cannot 'import' symbol 'baz' as it is not defined in 'Foo'
